--- a/src/App.css
+++ b/src/App.css
@@ -2,17 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -21,18 +10,37 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
+}
+.drum-pad {
+  width: 100%;
+  height: 5rem;
+}
+.pad {
+  padding-top: 2px;
+  padding-bottom: 2px;
+}
+#display {
+  min-height: 5rem;
+  background-color: rgb(48, 136, 85);
+}
+.card {
+  max-width: 600px;
+  background-color: rgb(48, 46, 46) !important;
+}
+.form-check-input:checked {
+  background-color: orange !important;
+  border-color: orange !important;
+}
+.padCol {
+  margin: auto !important;
+}
+.pFont {
   color: white;
+  font-size: calc(2px + 2vmin);
 }
-
-.App-link {
-  color: #61dafb;
+.padRow {
+  padding-left: 25px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.range-slider__tooltip__label {
+  color: white
 }
